--- a/src/app/screens/contact/contact.component.css
+++ b/src/app/screens/contact/contact.component.css
@@ -198,7 +198,7 @@
   display: flex;
   height: 50vh;
   flex-direction: column;
-  justify-content: center;
+  justify-content: start;
   align-items: center;
   gap: 14px;
   align-self: stretch;
@@ -586,6 +586,11 @@ input {
   height: 60px;
   border-radius: 50%;
   object-fit: cover;
+  background: linear-gradient(95deg, #2ebc96 -9.49%, #1a9096 89.62%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
 
 .group-title {
@@ -659,6 +664,9 @@ input {
   gap: 10px;
   border-radius: 2px;
   background: rgba(90, 103, 125, 0.1);
+  width: 40px;
+  cursor: pointer;
+  margin-top: 4px;
 }
 .btn-selectall:hover,
 .btn-import:hover {
@@ -702,6 +710,11 @@ input {
   height: 35px;
   border-radius: 50%;
   object-fit: cover;
+  background: linear-gradient(95deg, #2ebc96 -9.49%, #1a9096 89.62%);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
 }
 
 .contact-info h4 {
@@ -789,7 +802,7 @@ input {
   line-height: 10px;
   letter-spacing: 0.5px;
 }
-.groupAction1{
+.groupAction1 {
   display: flex;
   align-items: center;
   gap: 20px;
